openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gin-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gin-api
  template:
    metadata:
      labels:
        app: gin-api
    spec:
      containers:
        - name: gin-api
          image: image-registry.openshift-image-registry.svc:5000/vveeraso-dev/gin-api:latest
          ports:
            - containerPort: 8080
