openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gin-api
spec:
  selector:
    app: gin-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
